# ai-work-agent

./: .env.debug.example  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  check_dingtalk.ps1  check_dingtalk.sh  docker-compose.yml  pyproject.toml  run.py  start.ps1  start.sh  test_file_output.ps1  test_file_output.sh
app/: config.py  main.py
app/core/: ai_engine.py  message.py  router.py  skill_loader.py  tenant.py  tools.py  workflow.py
app/features/: assistant.py  base.py  chart.py  code.py  email.py  image_gen.py  meeting.py  ppt.py  project.py  reminder.py  report.py  summary.py  translate.py
app/services/: doc_parser.py  file_gen.py  history_store.py  project_board.py  rag.py  reminder.py
skills/: README.md
skills/cny-converter/: SKILL.md  handler.py
skills/cny-converter/agents/: openai.yaml
skills/project_weekly_report/: SKILL.md  skill.json
skills/web-search/: SKILL.md  handler.py  skill.json
static/: admin.html  index.html
tests/: test_doc_parser.py  test_file_gen.py  test_rag.py  test_recall.py  test_router.py  test_skill_loader.py  test_tenant.py  test_tools.py
